--- a/2018-10-16 - LoadContacts/ListApp/app/src/main/res/layout/activity_main.xml
+++ b/2018-10-16 - LoadContacts/ListApp/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/text"
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello world!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
